--- a/package.json
+++ b/package.json
@@ -5,9 +5,11 @@
     "github": "https://github/devnolife.com"
   },
   "scripts": {
-    "dev": "bun run --hot src/index.ts",
-    "generate": "drizzle-kit generate",
-    "migrate": "drizzle-kit migrate"
+    "dev": "bun --watch src/server.ts",
+    "start": "bun run src/server.ts",
+    "seed": "bun run src/drizzle/seed.ts",
+    "generate": "bun drizzle-kit generate",
+    "push": "bun drizzle-kit push"
   },
   "dependencies": {
     "@neondatabase/serverless": "^0.9.3",
@@ -15,6 +17,7 @@
     "dotenv": "^16.4.5",
     "drizzle-orm": "^0.30.10",
     "drizzle-zod": "^0.5.1",
+    "figlet": "^1.7.0",
     "hono": "^4.3.8",
     "pg": "^8.11.5",
     "uuid": "^9.0.1",
@@ -22,6 +25,7 @@
   },
   "devDependencies": {
     "@types/bun": "latest",
+    "@types/figlet": "^1.5.8",
     "@types/pg": "^8.11.6",
     "drizzle-kit": "^0.21.2"
   }
