--- a/tsconfig.json
+++ b/tsconfig.json
@@ -2,6 +2,16 @@
   "compilerOptions": {
     "strict": true,
     "jsx": "react-jsx",
-    "jsxImportSource": "hono/jsx"
+    "jsxImportSource": "hono/jsx",
+    "noImplicitAny": true,
+    "noUnusedParameters": true,
+    "noUnusedLocals": true,
+    "esModuleInterop": true,
+    "paths": {
+      "@tools/*": ["./src/tools/*"],
+      "@components/*": ["./src/components/*"],
+      "schema": ["./src/drizzle/schema.ts"],
+      "db": ["./src/drizzle/db.ts"],
+    },
   }
 }
