--- a/tsconfig.json
+++ b/tsconfig.json
@@ -13,6 +13,7 @@
       "schema": ["./src/drizzle/schema.ts"],
       "db": ["./src/drizzle/db.ts"],  
       "utils" : ["./src/utils/index.ts"],
+      "api" : ["./src/api/index.ts"],
     },
   }
 }
